--- a/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -1,59 +1,98 @@
-<!-- mis-anuncios.component.html -->
+<div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
+  <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Crear Anuncio</h2>
 
-<div class="bg-white border border-gray-200 rounded-lg shadow-md p-6">
-    <!-- Formulario para crear un nuevo anuncio -->
-    <form (ngSubmit)="crearAnuncio()" #formularioAnuncio="ngForm">
-      <div class="mb-4">
-        <label for="title" class="block text-gray-700 font-bold mb-2">Título</label>
-        <input type="text" id="title" name="title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.title" required>
-      </div>
-  
-      <div class="mb-4">
-        <label for="class" class="block text-gray-700 font-bold mb-2">Clase</label>
-        <input type="text" id="class" name="class" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.class" required>
-      </div>
-  
-      <!-- Agregar más campos para el formulario -->
-      <div class="mb-4">
-        <label for="aboutMe" class="block text-gray-700 font-bold mb-2">Acerca de mí</label>
-        <input type="text" id="aboutMe" name="aboutMe" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.about_me" required>
-      </div>
-      
-      <div class="mb-4">
-        <label for="description" class="block text-gray-700 font-bold mb-2">Descripción</label>
-        <input type="text" id="description" name="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.description" required>
-      </div>
-      
-      <div class="mb-4">
-        <label for="priceHour" class="block text-gray-700 font-bold mb-2">Precio por Hora</label>
-        <input type="text" id="priceHour" name="priceHour" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.price_hour" required>
-      </div>
-      
-      <div class="mb-4">
-        <label for="disponibility" class="block text-gray-700 font-bold mb-2">Disponibilidad</label>
-        <input type="text" id="disponibility" name="disponibility" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.disponibility" required>
-      </div>
-      
-      <div class="mb-4">
-        <label for="experience" class="block text-gray-700 font-bold mb-2">Experiencia</label>
-        <input type="text" id="experience" name="experience" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.experience" required>
-      </div>
+  <!-- Formulario para crear un nuevo anuncio -->
 
-      <!-- <div class="mb-4">
-        <label for="userId" class="block text-gray-700 font-bold mb-2">ID de Usuario</label>
-        <input type="number" id="userId" name="userId" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.user_id" required>
-      </div> -->
-  
-      <div class="mb-4">
-        <label for="programmingLanguageId" class="block text-gray-700 font-bold mb-2">Lenguaje de Programación</label>
-        <select id="programmingLanguageId" name="programmingLanguage_id" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.programmingLanguage_id" required>
-          <option *ngFor="let language of programmingLanguages" [value]="language.id">{{ language.languageName }}</option>
-        </select>
+  <form (ngSubmit)="crearAnuncio()" #formularioAnuncio="ngForm">
+
+    <div class="relative z-0 w-full mb-5 group">
+      <!-- Aquí he añadido la clase 'mb-4' -->
+      <input type="email" [(ngModel)]="nuevoAnuncio.title" name="email" id="email"
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder=" " required />
+      <label for="email"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Title</label>
     </div>
-    
-    
-      
-      <!-- Botón para enviar el formulario -->
-      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Crear Anuncio</button>
-    </form>
-  </div>
+
+    <!-- Class -->
+    <div class="relative z-0 w-full mb-5 group">
+      <input type="email" [(ngModel)]="nuevoAnuncio.class" name="email" id="email"
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder=" " required />
+      <label for="email"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Class</label>
+    </div>
+
+    <!-- About Me -->
+    <div class="relative z-0 w-full mb-5 group">
+      <!-- Añadida clase 'mb-4' -->
+      <input type="email" [(ngModel)]="nuevoAnuncio.about_me" name="email" id="email"
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder=" " required />
+      <label for="email"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">About
+        Me</label>
+    </div>
+
+    <!-- Descripcion & Price/Hour -->
+    <div class="grid md:grid-cols-2 md:gap-6">
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="text" [(ngModel)]="nuevoAnuncio.description" name="first_name" id="first_name"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="first_name"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Description</label>
+      </div>
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="text" [(ngModel)]="nuevoAnuncio.price_hour" name="last_name" id="last_name"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="last_name"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Price/Hour</label>
+      </div>
+    </div>
+
+    <!-- Disponibilidad & Experience -->
+    <div class="grid md:grid-cols-2 md:gap-6">
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="tel" [(ngModel)]="nuevoAnuncio.disponibility" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" name="phone"
+          id="phone"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="phone"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Disponibility</label>
+      </div>
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="text" [(ngModel)]="nuevoAnuncio.experience" name="company" id="company"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="company"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Experience</label>
+      </div>
+    </div>
+
+
+
+    <div class="mb-4">
+      <label for="programmingLanguageId" class="block text-gray-700 font-bold mb-2 dark:text-white">Lenguaje de
+        Programación</label>
+      <div class="relative">
+        <select id="programmingLanguageId" name="programmingLanguage_id"
+          class="block appearance-none w-full bg-white border border-gray-300 text-gray-700 py-2 px-3 rounded leading-tight focus:outline-none focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-200"
+          [(ngModel)]="nuevoAnuncio.programmingLanguage_id" required>
+          <option *ngFor="let language of programmingLanguages" [value]="language.id">{{ language.languageName }}
+          </option>
+        </select>
+      </div>
+    </div>
+
+
+    <!-- Botón para enviar el formulario -->
+    <button type="submit"  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Crear
+      Anuncio</button>
+  </form>
+</div>
