--- a/Frontend/src/app/components/mis-anuncios/mis-anuncios.component.html
+++ b/Frontend/src/app/components/mis-anuncios/mis-anuncios.component.html
@@ -1,26 +1,38 @@
-<div class="bg-white border border-gray-200 rounded-lg shadow-md p-6 grid grid-cols-1 md:grid-cols-2 gap-4">
-    <div *ngFor="let advertisement of advertisements.data">
-      <h2 class="text-2xl font-bold text-gray-900 mb-4">{{ advertisement.title }}</h2>
-      
+<!-- Botón para crear un nuevo anuncio -->
+<div class="flex justify-center mt-8 mb-4"> <!-- Añadido mb-4 para margen inferior -->
+  <a [routerLink]="['/crear-anuncio']"
+    class="block bg-green-500 dark:bg-green-700 hover:bg-green-700 dark:hover:bg-green-900 text-white font-bold py-2 px-4 rounded mx-auto">Crear
+    Nuevo Anuncio</a>
+</div>
+
+<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+  <ng-container *ngFor="let advertisement of advertisements">
+    <div class="border border-gray-300 dark:border-gray-600 rounded-lg p-4 bg-white dark:bg-gray-800">
+      <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100 mb-4">{{ advertisement.title }}</h2>
+
       <ng-container *ngFor="let user of users.data">
         <ng-container *ngIf="user.id === advertisement.user_id">
-          <img *ngIf="user.img" class="text-gray-700 mb-2" [src]="user.img" alt="User Image" />
+          <div class="flex items-center mb-2">
+            <img *ngIf="user.img" class="w-8 h-8 rounded-full mr-2" [src]="user.img" alt="User Image" />
+            <p class="text-gray-700 dark:text-gray-300">{{ user.name }}</p>
+          </div>
         </ng-container>
       </ng-container>
-      
+
       <ng-container *ngFor="let programmingLanguage of programmingLanguages.data">
         <ng-container *ngIf="programmingLanguage.id === advertisement.programmingLanguage_id">
-          <p class="text-gray-700 mb-2">Lenguaje de Programación: {{ programmingLanguage.languageName }}</p>
+          <p class="text-gray-700 dark:text-gray-300 mb-2">Lenguaje de Programación: {{ programmingLanguage.languageName
+            }}</p>
         </ng-container>
       </ng-container>
-  
-      <button (click)="modificarAnuncio(advertisement.id)" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Modificar</button>   
-      <button (click)="borrarAnuncio(advertisement.id)" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Borrar Anuncio</button>
 
+      <div class="flex space-x-4">
+        <button (click)="modificarAnuncio(advertisement.id)"
+          class="bg-blue-500 hover:bg-blue-700 dark:bg-blue-700 dark:hover:bg-blue-900 text-white font-bold py-2 px-4 rounded">Modificar</button>
+        <button (click)="borrarAnuncio(advertisement.id)"
+          class="bg-red-500 hover:bg-red-700 dark:bg-red-700 dark:hover:bg-red-900 text-white font-bold py-2 px-4 rounded">Borrar
+          Anuncio</button>
+      </div>
     </div>
-    
-    <!-- Botón para crear un nuevo anuncio -->
-    
-    <a [routerLink]="['/crear-anuncio']" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Crear Nuevo Anuncio</a>
+  </ng-container>
 </div>
-  
