--- a/Frontend/src/app/components/modificar-anuncio/modificar-anuncio.component.html
+++ b/Frontend/src/app/components/modificar-anuncio/modificar-anuncio.component.html
@@ -1,41 +1,84 @@
-<div class="bg-white border border-gray-200 rounded-lg shadow-md p-6">
-  <h2 class="text-2xl font-bold text-gray-900 mb-4">Modificar Anuncio</h2>
+<div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
+  <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Modificar Anuncio</h2>
   <form *ngIf="advertisement" (submit)="updateAdvertisement()">
-    <div class="mb-4">
-      <label for="title" class="block text-gray-700 font-bold mb-2">Título</label>
-      <input type="text" id="title" name="title" [(ngModel)]="advertisement.title" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
+    <!-- Email -->
+    <div class="relative z-0 w-full mb-5 group">
+      <!-- Aquí he añadido la clase 'mb-4' -->
+      <input type="email" [(ngModel)]="advertisement.title" name="email" id="email"
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder=" " required />
+      <label for="email"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Title</label>
     </div>
-    <div class="mb-4">
-        <label for="programmingLanguage" class="block text-gray-700 font-bold mb-2">Lenguaje de Programación</label>
-        <select id="programmingLanguage" name="programmingLanguage" [(ngModel)]="advertisement.programmingLanguage_id" class="border border-gray-300 rounded-md px-3 py-2 w-full">
-          <option *ngFor="let lang of programmingLanguages.data" [value]="lang.id">{{ lang.languageName }}</option>
-        </select>
+    <!-- Language -->
+    <div class="mt-6 mb-4"> <!-- Añadida clase 'mb-4' -->
+      <label for="programmingLanguage" class="block text-gray-700 font-bold mb-2">Lenguaje de Programación</label>
+      <select id="programmingLanguage" name="programmingLanguage" [(ngModel)]="advertisement.programmingLanguage_id"
+        class="input-field">
+        <option *ngFor="let lang of programmingLanguages.data" [value]="lang.id">{{ lang.languageName }}</option>
+      </select>
+    </div>
+    <!-- Class -->
+    <div class="relative z-0 w-full mb-5 group">
+      <!-- Añadida clase 'mb-4' -->
+      <input type="email" [(ngModel)]="advertisement.class" name="email" id="email"
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder=" " required />
+      <label for="email"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Class</label>
+    </div>
+    <!-- About Me -->
+    <div class="relative z-0 w-full mb-5 group">
+      <!-- Añadida clase 'mb-4' -->
+      <input type="email" [(ngModel)]="advertisement.about_me" name="email" id="email"
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder=" " required />
+      <label for="email"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">About
+        Me</label>
+    </div>
+
+    <div class="grid md:grid-cols-2 md:gap-6">
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="text" [(ngModel)]="advertisement.description" name="first_name" id="first_name"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="first_name"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Description</label>
       </div>
-    <div class="mb-4">
-      <label for="class" class="block text-gray-700 font-bold mb-2">Clase</label>
-      <input type="text" id="class" name="class" [(ngModel)]="advertisement.class" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
-    </div>
-    <div class="mb-4">
-        <label for="about_me" class="block text-gray-700 font-bold mb-2">Sobre mí</label>
-        <input type="text" id="about_me" name="about_me" [(ngModel)]="advertisement.about_me" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="text" [(ngModel)]="advertisement.price_hour" name="last_name" id="last_name"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="last_name"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Price/Hour</label>
       </div>
-    <div class="mb-4">
-      <label for="description" class="block text-gray-700 font-bold mb-2">Descripción</label>
-      <input type="text" id="description" name="description" [(ngModel)]="advertisement.description" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
     </div>
-    <div class="mb-4">
-      <label for="price_hour" class="block text-gray-700 font-bold mb-2">Precio por Hora</label>
-      <input type="text" id="price_hour" name="price_hour" [(ngModel)]="advertisement.price_hour" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
+
+    <div class="grid md:grid-cols-2 md:gap-6">
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="tel" [(ngModel)]="advertisement.disponibility" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" name="phone"
+          id="phone"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="phone"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Disponibility</label>
+      </div>
+      <div class="relative z-0 w-full mb-5 group">
+        <!-- Añadida clase 'mb-4' -->
+        <input type="text" [(ngModel)]="advertisement.experience" name="company" id="company"
+          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+          placeholder=" " required />
+        <label for="company"
+          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Experience</label>
+      </div>
     </div>
-    <div class="mb-4">
-      <label for="disponibility" class="block text-gray-700 font-bold mb-2">Disponibilidad</label>
-      <input type="text" id="disponibility" name="disponibility" [(ngModel)]="advertisement.disponibility" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
-    </div>
-    <div class="mb-4">
-      <label for="experience" class="block text-gray-700 font-bold mb-2">Experiencia</label>
-      <input type="text" id="experience" name="experience" [(ngModel)]="advertisement.experience" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
-    </div>
-    <!-- Agrega los campos adicionales según sea necesario -->
-    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Guardar Cambios</button>
+    <!-- Save Changes Button -->
+    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Guardar
+      Cambios</button>
   </form>
+
 </div>
